CSS fixes for buttons that wrap

--- a/www/resources/css/main.css
+++ b/www/resources/css/main.css
@@ -208,6 +208,7 @@ a.button {
   padding: 4px 8px;
   color: #000;
   text-decoration: none;
+  line-height: 2.5em;
 }
 
 a.button:hover { 
